--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ captures/
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
+Description/Clean-Architecture*.png
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
